--- a/badstats/templates/stats/album.html
+++ b/badstats/templates/stats/album.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-
+  {% if stats['genres'] %}
   <article class='post'>
     <header>
       <h1>Genre</h1>
@@ -23,6 +23,7 @@
     {% endfor %}
   </article>
   <hr>
+  {% endif %}
 
   <article class='post'>
     <header>
