--- a/badstats/templates/base.html
+++ b/badstats/templates/base.html
@@ -7,6 +7,7 @@
     <li><a href="{{ url_for('stats.search', kind='artist', search='') }}">Artists</a>
     <li><a href="{{ url_for('stats.search', kind='album', search='') }}">Albums</a>
     <li><a href="{{ url_for('stats.search', kind='song', search='') }}">Songs</a>
+    <li><a href="{{ url_for('auth.userAuth', kind='playlist') }}">Playlist</a>
   </ul>
 </nav>
 <section class="content">
