Playlist search and plot works
With this commit user authentication and some playlist features are
implemented. Now, users can connect to their spotify account, see the
first 20 or so playlists they have, see details about each playlist,
and plot characteristic bar graphs for each playlist.

The user authentication is implemented with a session cookie. Should
make other authenticated things in the future a bit easier.

This commit includes database schema changes. Since no persistent data
needs to be carried over the database can just be reinitialized.

Note: I think because I haven't implemented rate limiting yet it'll
throw errors with long playlists. I also don't really handle errors
when it comes to rate limiting so it'll just look bad when it crashes.

--- a/badstats/templates/base.html
+++ b/badstats/templates/base.html
@@ -7,7 +7,7 @@
     <li><a href="{{ url_for('stats.search', kind='artist', search='') }}">Artists</a>
     <li><a href="{{ url_for('stats.search', kind='album', search='') }}">Albums</a>
     <li><a href="{{ url_for('stats.search', kind='song', search='') }}">Songs</a>
-    <li><a href="{{ url_for('auth.userAuth', kind='playlist') }}">Playlist</a>
+    <li><a href="{{ url_for('stats.userPlaylists', kind='playlist') }}">Playlist</a>
   </ul>
 </nav>
 <section class="content">
@@ -19,3 +19,5 @@
   {% endfor %}
   {% block content %}{% endblock %}
 </section>
+<a href="{{ url_for('stats.tos') }}">Terms of Service</a>
+<a href="{{ url_for('stats.privacypolicy') }}">Privacy Policy</a>
