--- a/badstats/templates/stats/user/playlistListItem.html
+++ b/badstats/templates/stats/user/playlistListItem.html
@@ -3,7 +3,9 @@
         <img class='playlistThumbnail' src="{{ result['images'][0]['url'] }}" />
     {% endif %}
     <div class='playlistListText'>
-        <h2 class='playlistListTitle'>{{ result['name']|safe }}</h2>
+        <a href="{{ url_for('stats.userItem', kind='playlist', id=result['id']) }}">
+            <h2 class='playlistListTitle'>{{ result['name']|safe }}</h2>
+        </a>
         <p class='playlistListDesc'>{{ result['description']|safe }}</p>
     </div>
 </article>
