--- a/badstats/templates/stats/album.html
+++ b/badstats/templates/stats/album.html
@@ -2,12 +2,7 @@
 
 {% block header %}
   {% if stats['images'][0] %}
-    <img class='searchPic' 
-      style='
-        padding-top: 5px; 
-        padding-bottom: 5px; 
-        padding-right: 5px;' 
-      src="{{ stats['images'][0]['url'] }}" />
+    <img class='detailPic' src="{{ stats['images'][0]['url'] }}" />
   {% endif %}
   <h1 style='padding-left: 5px; margin-top: auto; margin-bottom: auto;'>{% block title %}{{ stats['name'] }}{% endblock %}</h1>
 {% endblock %}
