--- a/badstats/templates/stats/plot.html
+++ b/badstats/templates/stats/plot.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<img src="data:image/png;base64,{{ result }}" />
+<img class="graph" src="data:image/png;base64,{{ result }}" />
 
 {% endblock %}
 
