--- a/badstats/templates/stats/user/playlist.html
+++ b/badstats/templates/stats/user/playlist.html
@@ -2,7 +2,7 @@
 
 {% block header %}
   {% if stats['images'][0] %}
-    <img class='searchPic' 
+    <img class='detailPic' 
       style='
         padding-top: 5px; 
         padding-bottom: 5px; 
