--- a/badstats/templates/base.html
+++ b/badstats/templates/base.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>{% block title %}{% endblock %} - BadStats</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
