--- a/badstats/templates/stats/search.html
+++ b/badstats/templates/stats/search.html
@@ -10,18 +10,14 @@
     <input name="search" id="search" value="{{ request.form['search'] }}" required>
   </form>
   {% for result in results %}
-  <a href='{{ url_for("stats.item", kind=kind, id=result["id"]) }}'>
-    <article class="post">
-      <header>
-        <h1>{{ result['name'] }}</h1>
-      </header>
+    <a class="listItem" href='{{ url_for("stats.item", kind=kind, id=result["id"]) }}'>
       {% if result['images'][0] %}
-        <img class='searchPic' src="{{ result['images'][0]['url'] }}" />
+        <img class='listPic' src="{{ result['images'][0]['url'] }}" />
       {% endif %}
-    </article>
-  </a>
-  {% if not loop.last %}
-    <hr>
-  {% endif %}
+      <h1 class="listText">{{ result['name'] }}</h1>
+    </a>
+    {% if not loop.last %}
+      <hr>
+    {% endif %}
   {% endfor %}
 {% endblock %}
