--- a/badstats/templates/stats/user/playlistListItem.html
+++ b/badstats/templates/stats/user/playlistListItem.html
@@ -1,12 +1,10 @@
-<article class='playlistListItem'>
+<a class="listItem" href="{{ url_for('stats.userItem', kind='playlist', id=result['id']) }}">
     {% if result['images'][0] %}
-        <img class='playlistThumbnail' src="{{ result['images'][0]['url'] }}" />
+        <img class='listPic' src="{{ result['images'][0]['url'] }}" />
     {% endif %}
-    <div class='playlistListText'>
-        <a href="{{ url_for('stats.userItem', kind='playlist', id=result['id']) }}">
-            <h2 class='playlistListTitle'>{{ result['name']|safe }}</h2>
-        </a>
-        <p class='playlistListDesc'>{{ result['description']|safe }}</p>
+    <div class='listText'>
+        <h2>{{ result['name']|safe }}</h2>
+        <p>{{ result['description']|safe }}</p>
     </div>
-</article>
+</a>
 
