--- a/badstats/templates/stats/album.html
+++ b/badstats/templates/stats/album.html
@@ -4,7 +4,11 @@
   {% if stats['images'][0] %}
     <img class='detailPic' src="{{ stats['images'][0]['url'] }}" />
   {% endif %}
-  <h1 style='padding-left: 5px; margin-top: auto; margin-bottom: auto;'>{% block title %}{{ stats['name'] }}{% endblock %}</h1>
+  <h1 style='padding-left: 5px; margin-top: auto; margin-bottom: auto;'>
+    {% block title %}
+      {{ stats['name'] }}
+    {% endblock %}
+  </h1>
 {% endblock %}
 
 {% block content %}
@@ -41,7 +45,7 @@
       <h1>Tracks</h1>
     </header>
       <ol>
-      {% for track in stats['tracks'] %}
+      {% for track in stats['tracks']['items'] %}
         <li><a href="{{ url_for('stats.item', kind='song', id=track['id']) }}">
           {{ track['name'] }}
         </a></li>
