--- a/badstats/templates/stats/artist.html
+++ b/badstats/templates/stats/artist.html
@@ -23,7 +23,7 @@
     <header>
       <h1>Followers</h1>
     </header>
-    {{ stats['followers'] }}
+    {{ stats['followers']['total'] }}
   </article>
   <hr>
 
@@ -46,8 +46,8 @@
             {{ track['name'] }} 
           </a>
           off 
-          <a href='{{ url_for("stats.item", kind="album", id=track["albumid"]) }}'>
-            {{ track['album'] }}
+          <a href='{{ url_for("stats.item", kind="album", id=track["album"]["id"]) }}'>
+            {{ track['album']['name'] }}
           </a>
         </li>
       {% endfor %}
