--- a/badstats/templates/stats/user/playlistSelect.html
+++ b/badstats/templates/stats/user/playlistSelect.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-  {% for result in results %}
+  {% for result in results['items'] %}
     {% include 'stats/user/playlistListItem.html' with context %}
   {% if not loop.last %}
     <hr>
